--- a/JuntoTest/View/ProductView.xib
+++ b/JuntoTest/View/ProductView.xib
@@ -11,12 +11,59 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="508" height="230"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProductView" customModule="JuntoTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="508" height="240"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+            <subviews>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-9r-WEf">
+                    <rect key="frame" x="228" y="20" width="260" height="24"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="upvotes: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQD-Bf-Stq">
+                    <rect key="frame" x="228" y="199" width="260" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vmq-bh-yeR">
+                    <rect key="frame" x="20" y="20" width="200" height="200"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="200" id="FLA-Xm-X4W"/>
+                        <constraint firstAttribute="width" constant="200" id="fID-0F-4hK"/>
+                    </constraints>
+                </imageView>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOE-1q-GTd">
+                    <rect key="frame" x="228" y="52" width="260" height="21"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+            </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+            <constraints>
+                <constraint firstItem="qQD-Bf-Stq" firstAttribute="bottom" secondItem="Vmq-bh-yeR" secondAttribute="bottom" id="4F0-co-iLC"/>
+                <constraint firstAttribute="bottom" secondItem="Vmq-bh-yeR" secondAttribute="bottom" constant="20" id="5ff-eF-IIu"/>
+                <constraint firstAttribute="trailing" secondItem="Ft1-9r-WEf" secondAttribute="trailing" constant="20" id="Jfl-vh-UfP"/>
+                <constraint firstItem="Ft1-9r-WEf" firstAttribute="top" secondItem="Vmq-bh-yeR" secondAttribute="top" id="L9L-8m-Zcp"/>
+                <constraint firstItem="qOE-1q-GTd" firstAttribute="top" secondItem="Ft1-9r-WEf" secondAttribute="bottom" constant="8" id="N8n-nH-Idh"/>
+                <constraint firstItem="Vmq-bh-yeR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="OIO-ej-Eep"/>
+                <constraint firstItem="qOE-1q-GTd" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="S0j-CF-d7b"/>
+                <constraint firstAttribute="trailing" secondItem="qQD-Bf-Stq" secondAttribute="trailing" constant="20" id="ZQ7-JH-g67"/>
+                <constraint firstAttribute="trailing" secondItem="qOE-1q-GTd" secondAttribute="trailing" constant="20" id="eMT-xm-bby"/>
+                <constraint firstItem="Ft1-9r-WEf" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="fxd-8n-G5w"/>
+                <constraint firstItem="qQD-Bf-Stq" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="iWr-Co-5Rd"/>
+                <constraint firstItem="Vmq-bh-yeR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="sdr-10-IPG"/>
+            </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="117" y="594"/>
+            <connections>
+                <outlet property="name" destination="Ft1-9r-WEf" id="EAI-iG-yTb"/>
+                <outlet property="tageline" destination="qOE-1q-GTd" id="l5c-Hj-9Qj"/>
+                <outlet property="thumbnail" destination="Vmq-bh-yeR" id="J2n-97-BRf"/>
+                <outlet property="upvotes" destination="qQD-Bf-Stq" id="XFa-p7-TxY"/>
+            </connections>
+            <point key="canvasLocation" x="119" y="618"/>
         </view>
     </objects>
 </document>
