--- a/JuntoTest/View/ProductViewCell.xib
+++ b/JuntoTest/View/ProductViewCell.xib
@@ -11,31 +11,31 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProductView" customModule="JuntoTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="508" height="240"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProductViewCell" customModule="JuntoTest" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="508" height="190"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-9r-WEf">
-                    <rect key="frame" x="228" y="20" width="260" height="24"/>
+                    <rect key="frame" x="178" y="20" width="310" height="24"/>
                     <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="upvotes: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQD-Bf-Stq">
-                    <rect key="frame" x="228" y="199" width="260" height="21"/>
+                    <rect key="frame" x="178" y="149" width="310" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vmq-bh-yeR">
-                    <rect key="frame" x="20" y="20" width="200" height="200"/>
+                    <rect key="frame" x="20" y="20" width="150" height="150"/>
                     <constraints>
-                        <constraint firstAttribute="height" constant="200" id="FLA-Xm-X4W"/>
-                        <constraint firstAttribute="width" constant="200" id="fID-0F-4hK"/>
+                        <constraint firstAttribute="height" constant="150" id="FLA-Xm-X4W"/>
+                        <constraint firstAttribute="width" constant="150" id="fID-0F-4hK"/>
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOE-1q-GTd">
-                    <rect key="frame" x="228" y="52" width="260" height="21"/>
+                    <rect key="frame" x="178" y="52" width="310" height="21"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -63,7 +63,7 @@
                 <outlet property="thumbnail" destination="Vmq-bh-yeR" id="J2n-97-BRf"/>
                 <outlet property="upvotes" destination="qQD-Bf-Stq" id="XFa-p7-TxY"/>
             </connections>
-            <point key="canvasLocation" x="119" y="618"/>
+            <point key="canvasLocation" x="119" y="593"/>
         </view>
     </objects>
 </document>
