--- a/JuntoTest/View/ProductViewCell.xib
+++ b/JuntoTest/View/ProductViewCell.xib
@@ -16,14 +16,14 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-9r-WEf">
-                    <rect key="frame" x="178" y="20" width="310" height="24"/>
-                    <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                    <rect key="frame" x="178" y="20" width="310" height="21.5"/>
+                    <fontDescription key="fontDescription" type="boldSystem" pointSize="18"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="upvotes: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQD-Bf-Stq">
-                    <rect key="frame" x="178" y="149" width="310" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="178" y="155.5" width="310" height="14.5"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
@@ -35,25 +35,24 @@
                     </constraints>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOE-1q-GTd">
-                    <rect key="frame" x="178" y="52" width="310" height="21"/>
-                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <rect key="frame" x="178" y="49.5" width="310" height="18"/>
+                    <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
-                <constraint firstItem="qQD-Bf-Stq" firstAttribute="bottom" secondItem="Vmq-bh-yeR" secondAttribute="bottom" id="4F0-co-iLC"/>
-                <constraint firstAttribute="bottom" secondItem="Vmq-bh-yeR" secondAttribute="bottom" constant="20" id="5ff-eF-IIu"/>
+                <constraint firstAttribute="trailing" secondItem="qOE-1q-GTd" secondAttribute="trailing" constant="20" id="4Io-Fl-xry"/>
+                <constraint firstItem="Ft1-9r-WEf" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="8qc-pS-X4e"/>
                 <constraint firstAttribute="trailing" secondItem="Ft1-9r-WEf" secondAttribute="trailing" constant="20" id="Jfl-vh-UfP"/>
-                <constraint firstItem="Ft1-9r-WEf" firstAttribute="top" secondItem="Vmq-bh-yeR" secondAttribute="top" id="L9L-8m-Zcp"/>
-                <constraint firstItem="qOE-1q-GTd" firstAttribute="top" secondItem="Ft1-9r-WEf" secondAttribute="bottom" constant="8" id="N8n-nH-Idh"/>
+                <constraint firstAttribute="trailing" secondItem="qQD-Bf-Stq" secondAttribute="trailing" constant="20" id="NLG-m2-SXY"/>
+                <constraint firstItem="qOE-1q-GTd" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="Ni4-Wk-sJg"/>
                 <constraint firstItem="Vmq-bh-yeR" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="20" id="OIO-ej-Eep"/>
-                <constraint firstItem="qOE-1q-GTd" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="S0j-CF-d7b"/>
-                <constraint firstAttribute="trailing" secondItem="qQD-Bf-Stq" secondAttribute="trailing" constant="20" id="ZQ7-JH-g67"/>
-                <constraint firstAttribute="trailing" secondItem="qOE-1q-GTd" secondAttribute="trailing" constant="20" id="eMT-xm-bby"/>
+                <constraint firstItem="qQD-Bf-Stq" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="PM7-h8-aoI"/>
+                <constraint firstItem="qOE-1q-GTd" firstAttribute="top" secondItem="Ft1-9r-WEf" secondAttribute="bottom" constant="8" id="Pjg-D1-qAE"/>
+                <constraint firstAttribute="bottom" secondItem="qQD-Bf-Stq" secondAttribute="bottom" constant="20" id="QDz-ab-ibo"/>
                 <constraint firstItem="Ft1-9r-WEf" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="fxd-8n-G5w"/>
-                <constraint firstItem="qQD-Bf-Stq" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="iWr-Co-5Rd"/>
                 <constraint firstItem="Vmq-bh-yeR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="sdr-10-IPG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
