--- a/JuntoTest/Base.lproj/Main.storyboard
+++ b/JuntoTest/Base.lproj/Main.storyboard
@@ -48,11 +48,53 @@
                     <navigationItem key="navigationItem" id="nIs-Kk-y4o"/>
                     <connections>
                         <outlet property="tableView" destination="hvk-J9-fyc" id="KFS-pf-HZH"/>
+                        <segue destination="XzN-Nr-f1B" kind="show" identifier="SelectedProduct" id="Czc-cY-U5R"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1058.4000000000001" y="-559.07046476761627"/>
+        </scene>
+        <!--Product Controller-->
+        <scene sceneID="0yp-xG-DxX">
+            <objects>
+                <viewController id="XzN-Nr-f1B" customClass="ProductController" customModule="JuntoTest" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="dpb-wb-5Ii"/>
+                        <viewControllerLayoutGuide type="bottom" id="NzQ-4W-67O"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="1th-p8-442">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="2eY-kd-0kL">
+                                <rect key="frame" x="166" y="617" width="42" height="30"/>
+                                <state key="normal" title="Get it!"/>
+                                <connections>
+                                    <action selector="getItButtonPressed:" destination="XzN-Nr-f1B" eventType="touchUpInside" id="QaY-KP-d2Q"/>
+                                </connections>
+                            </button>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="gPi-Gc-gyl">
+                                <rect key="frame" x="0.0" y="64" width="375" height="545"/>
+                            </scrollView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="gPi-Gc-gyl" firstAttribute="leading" secondItem="1th-p8-442" secondAttribute="leading" id="CUa-PO-sGv"/>
+                            <constraint firstItem="2eY-kd-0kL" firstAttribute="centerX" secondItem="1th-p8-442" secondAttribute="centerX" id="P8C-e9-c1D"/>
+                            <constraint firstItem="gPi-Gc-gyl" firstAttribute="top" secondItem="dpb-wb-5Ii" secondAttribute="bottom" id="WXK-j8-hvO"/>
+                            <constraint firstItem="NzQ-4W-67O" firstAttribute="top" secondItem="2eY-kd-0kL" secondAttribute="bottom" constant="20" id="XGI-9A-4HL"/>
+                            <constraint firstItem="2eY-kd-0kL" firstAttribute="top" secondItem="gPi-Gc-gyl" secondAttribute="bottom" constant="8" id="Xus-3w-bYa"/>
+                            <constraint firstAttribute="trailing" secondItem="gPi-Gc-gyl" secondAttribute="trailing" id="elY-YO-WYB"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="scrollView" destination="gPi-Gc-gyl" id="vE6-HK-BQB"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Tk5-NW-4Vh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1917.5999999999999" y="-560.86956521739137"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="9pm-Rg-D5f">
