--- a/JuntoTest/View/ProductViewCell.xib
+++ b/JuntoTest/View/ProductViewCell.xib
@@ -12,7 +12,7 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="ProductViewCell" customModule="JuntoTest" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="508" height="190"/>
+            <rect key="frame" x="0.0" y="0.0" width="508" height="220"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="name:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ft1-9r-WEf">
@@ -22,20 +22,20 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="upvotes: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qQD-Bf-Stq">
-                    <rect key="frame" x="178" y="155.5" width="310" height="14.5"/>
+                    <rect key="frame" x="178" y="185.5" width="310" height="14.5"/>
                     <fontDescription key="fontDescription" type="system" pointSize="12"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Vmq-bh-yeR">
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="249" translatesAutoresizingMaskIntoConstraints="NO" id="Vmq-bh-yeR">
                     <rect key="frame" x="20" y="20" width="150" height="150"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="150" id="FLA-Xm-X4W"/>
                         <constraint firstAttribute="width" constant="150" id="fID-0F-4hK"/>
                     </constraints>
                 </imageView>
-                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOE-1q-GTd">
-                    <rect key="frame" x="178" y="49.5" width="310" height="18"/>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="249" verticalHuggingPriority="249" text="description: " textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="qOE-1q-GTd">
+                    <rect key="frame" x="178" y="50" width="310" height="18"/>
                     <fontDescription key="fontDescription" type="system" pointSize="15"/>
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
@@ -52,7 +52,9 @@
                 <constraint firstItem="qQD-Bf-Stq" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="PM7-h8-aoI"/>
                 <constraint firstItem="qOE-1q-GTd" firstAttribute="top" secondItem="Ft1-9r-WEf" secondAttribute="bottom" constant="8" id="Pjg-D1-qAE"/>
                 <constraint firstAttribute="bottom" secondItem="qQD-Bf-Stq" secondAttribute="bottom" constant="20" id="QDz-ab-ibo"/>
+                <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="Vmq-bh-yeR" secondAttribute="bottom" constant="20" id="fKv-cI-j2e"/>
                 <constraint firstItem="Ft1-9r-WEf" firstAttribute="leading" secondItem="Vmq-bh-yeR" secondAttribute="trailing" constant="8" id="fxd-8n-G5w"/>
+                <constraint firstItem="qQD-Bf-Stq" firstAttribute="top" relation="greaterThanOrEqual" secondItem="qOE-1q-GTd" secondAttribute="bottom" constant="8" id="j3S-uo-mM2"/>
                 <constraint firstItem="Vmq-bh-yeR" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="20" id="sdr-10-IPG"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
@@ -62,7 +64,7 @@
                 <outlet property="thumbnail" destination="Vmq-bh-yeR" id="J2n-97-BRf"/>
                 <outlet property="upvotes" destination="qQD-Bf-Stq" id="XFa-p7-TxY"/>
             </connections>
-            <point key="canvasLocation" x="119" y="593"/>
+            <point key="canvasLocation" x="119" y="608"/>
         </view>
     </objects>
 </document>
